# arb-arbitrage

./: .dockerignore  .env.example  .env.server.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT_HANDOFF_ZH.md  Dockerfile  MEV_ARBITRAGE_CONTEXT.md  README.md  SESSION_CONTEXT.md  docker-compose.yml  foundry.toml  scan-output.json  scan_triangles.mjs  scan_uniswap_v3_arb.mjs
.githooks/: pre-commit  pre-push
.github/workflows/: docker-image.yml
scanner/: Cargo.toml  README.md
scanner/src/: config.rs  execute.rs  execution_call.rs  graph.rs  main.rs  path.rs  quote.rs  simulate.rs  state.rs  watcher.rs
src/: RouteArb.sol  TriangleArb.sol
test/: MorphoFlashLoan.t.sol  RouteArbUnit.t.sol  TriangleArbFork.t.sol
